# CUDA-checkerboard-detector

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  main.h  main.hpp  timing.h
include/checkerboard/: checkerboard.hpp  corners.h  detectCheckerBoard.h  lines.h
include/checkerboard/cuda/: cornersCuda.h  cuda_error_check.h  getLines.h  hessian.h  refineLines.h
src/: main.cpp
src/checkerboard/: checkerboard.cpp  corners.cpp  detectCheckerBoard.cpp  lines.cpp
src/checkerboard/cuda/: corners.cu  getCheckerBoardLines.cu  getCheckerBoardLines2.cu  getCheckerBoardLinesOld.cu  hessian.cu  refineLines.cu
